myteo/test/analyze/type_check/assignment/destructuring.exp
Error: Expected type `(int, string)` but found `int`
test/analyze/type_check/assignment/destructuring.myte:11:11
 11 |   (x, y) = 1;
    |            ^

Error: Expected type `(int, string)` but found `(int, int)`
test/analyze/type_check/assignment/destructuring.myte:14:11-17
 14 |   (x, y) = (1, 1);
    |            ^^^^^^